Middleware first working version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 project (mbmiddleware)
 
+find_package (Threads)
 add_executable(mbmiddleware main.cpp mbmiddleware.cpp mbmiddleware.h)
+target_link_libraries (mbmiddleware ${CMAKE_THREAD_LIBS_INIT})
 
